[gd_scene load_steps=20 format=2]

[ext_resource path="res://res/themes/HealthBar.tres" type="Theme" id=1]
[ext_resource path="res://scenes/characters/Basic/BasicCharacter.gd" type="Script" id=2]
[ext_resource path="res://arts/explosion/02.png" type="Texture" id=3]
[ext_resource path="res://arts/explosion/04.png" type="Texture" id=4]
[ext_resource path="res://arts/explosion/05.png" type="Texture" id=5]
[ext_resource path="res://arts/explosion/07.png" type="Texture" id=6]
[ext_resource path="res://arts/explosion/11.png" type="Texture" id=7]
[ext_resource path="res://arts/explosion/14.png" type="Texture" id=8]
[ext_resource path="res://arts/explosion/06.png" type="Texture" id=9]
[ext_resource path="res://arts/explosion/15.png" type="Texture" id=10]
[ext_resource path="res://arts/explosion/00.png" type="Texture" id=11]
[ext_resource path="res://arts/explosion/12.png" type="Texture" id=12]
[ext_resource path="res://arts/explosion/09.png" type="Texture" id=13]
[ext_resource path="res://arts/explosion/01.png" type="Texture" id=14]
[ext_resource path="res://arts/explosion/10.png" type="Texture" id=15]
[ext_resource path="res://arts/explosion/08.png" type="Texture" id=16]
[ext_resource path="res://arts/explosion/03.png" type="Texture" id=17]
[ext_resource path="res://arts/explosion/13.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": false,
"name": "explosion",
"speed": 36.0
} ]

[node name="BasicCharacter" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 127.0
margin_right = 112.0
margin_bottom = 155.0
theme = ExtResource( 1 )
value = 50.0
percent_visible = false

[node name="Pivot" type="Node2D" parent="."]

[node name="Areas" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "explosion"
